coupon UI and bug fixes

--- a/src/main/resources/templates/admin-panel.html
+++ b/src/main/resources/templates/admin-panel.html
@@ -120,7 +120,7 @@
                         <a class="nav-link profile-navbar-text"
                            th:attr="data-url=@{/admin-panel/coupon(size=(${#request.getParameter('size')} ?: '3'),
                                                                     page=(${#request.getParameter('page')} ?: '1'),
-                                                                    sort=(${#request.getParameter('sort')} ?: 'ID-asc'))}"
+                                                                    sort=(${#request.getParameter('sort')} ?: 'ID-desc'))}"
                            th:href="@{#coupon}">Coupons</a>
                     </li>
 
