--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -57,9 +57,9 @@
                             <div class="cart_bar">
                                 <ul class="cart_bar_list item_list d-flex flex-row align-items-center justify-content-end">
                                     <li class="mr-auto">Product</li>
-                                    <li>Price</li>
-                                    <li>Quantity</li>
-                                    <li>Total</li>
+                                    <li style="text-align: center">Price</li>
+                                    <li style="text-align: center">Quantity</li>
+                                    <li style="text-align: center">Total</li>
                                     <li></li>
                                     <li></li>
                                 </ul>
@@ -233,16 +233,17 @@
                                 </div>
                                 <div class="coupon_form_container relativer">
                                     <form id="coupon_form" class="coupon_form">
-                                        <input type="text" id= "coupon_code" style="width: calc(100% - 120px);height: 44px;"
+                                        <input type="text" id="coupon_code"
+                                               style="width: calc(100% - 120px);height: 44px;" maxlength="255"
                                                class="checkout_input form-control" title="Enter your coupon code.">
-                                        <input type="button" class="coupon_button" id = "coupon_submit" value="APPLY">
-                                        <input type="hidden" id="discount" name="discount" />
-                                        <input type="hidden" id="code" name="code" />
+                                        <input type="button" class="coupon_button" id="coupon_submit" value="APPLY">
+                                        <input type="hidden" id="discount" name="discount"/>
+                                        <input type="hidden" id="code" name="code"/>
                                     </form>
                                 </div>
 
                                 <!-- Invalid coupon code. warning -->
-                                <div id="invalid_coupon" class="coupon_text" style="color:red; font-weight: bold"></div>
+                                <div class="coupon_text">&nbsp;</div>
 
                                 <div class="shipping">
                                     <div class="cart_extra_title">Shipping Method</div>
@@ -455,7 +456,7 @@
             subTotal: $('#sub-total').text(),
             shipping: $("input[name='shipping_radio']:checked").val(),
             discount: $('#discount').val(),
-            codes:  $("#code").val()
+            codes: $("#code").val()
         };
 
         event.preventDefault();
@@ -480,25 +481,23 @@
         $.getJSON("/cart/coupon", {
             coupon: $("#coupon_code").val(),
             ajax: 'true'
+
         }, function (data) {
-            console.log(data);
-            if(data != -1 && data != -2){
-                console.log(data);
+            if (data != -1 && data != -2) {
                 $("#discount").val(data);
                 var total = (parseFloat(subTotal) * parseFloat(data));
                 $("#coupon").text(parseFloat(total).toFixed(2));
-                console.log(total);
                 $("#code").val(codes);
-                document.getElementById("coupon_form").reset();
+                // document.getElementById("coupon_form").reset();
 
-            } else if( data == -1){
+            } else if (data == -1) {
                 iziToast.show({
                     title: 'Fail',
                     message: 'Invalid coupon code.',
                     position: 'topRight',
                     color: 'red'
                 });
-            } else if( data == -2) {
+            } else if (data == -2) {
                 iziToast.show({
                     title: 'Fail',
                     message: 'Coupon code already used.',
@@ -509,7 +508,6 @@
         });
 
     });
-
 
     /*]]>*/
 </script>
@@ -579,7 +577,7 @@
 
     $('#shipping_text, #sub-total, #coupon').on('DOMSubtreeModified', function () {
         var sum = 0;
-        var coupon = parseFloat($("#coupon").text()) * 2 ;
+        var coupon = parseFloat($("#coupon").text()) * 2;
         $('.result').each(function () {
             sum += +$(this).text() || 0;
             $("#final_result").text(parseFloat(sum - coupon).toFixed(2));
